--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -9,8 +9,7 @@
         <div class="bg-gray-50 p-6 rounded-lg shadow-inner">
           <h2 class="text-2xl font-semibold text-gray-700 mb-4 text-center">User Information</h2>
           <div class="text-gray-600 space-y-2">
-            <p><strong>Name:</strong> <%= @user.name.present? ? @user.name : 'Not provided' %></p>
-            <p><strong>Email:</strong> <%= @user.email %></p>
+            <p><strong>Name:</strong> <%= @user.full_name.present? ? @user.full_name : 'Not provided' %></p>            <p><strong>Email:</strong> <%= @user.email %></p>
             <p><strong>Role:</strong> <%= @user.role.capitalize %></p>
           </div>
         </div>
